added some pictures

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <header id="hero" class="hero-section">
         <div class="hero-overlay"></div>
         <div class="hero-content fade-in-up">
-            <h1 class="main-title">ITOLO GIRLS’ SECONDARY SCHOOL</h1>
-            <p class="subtitle">ERIC MOORE, SURULERE</p>
+            <h1 class="main-title">ITOLO GIRLS’ SECONDARY SCHOOL 2026</h1>
+            <p class="subtitle">ERIC MOORE, SURULERE, LAGOS.</p>
             <div class="anniversary-badges">
                 <span class="badge">45th School Anniversary (Est. 1981)</span>
                 <span class="badge">40th Anniversary - 1986 Set</span>
@@ -123,21 +123,19 @@
                     <img src="img/img1.jpeg" alt="Old School Block" class="gallery-img">
                 </div>
                 <div class="gallery-item fade-in delay-100">
-                    <img src="https://placehold.co/400x300?text=Class+of+'86" alt="Class of '86" class="gallery-img">
+                    <img src="img/set03.jpeg" alt="Class of '03" class="gallery-img">
                 </div>
                 <div class="gallery-item fade-in delay-200">
-                    <img src="https://placehold.co/400x300?text=Sporting+Event" alt="Sporting Event"
-                        class="gallery-img">
+                    <img src="img/seto3.jpeg" alt="Class of '03" class="gallery-img">
                 </div>
                 <div class="gallery-item fade-in">
-                    <img src="https://placehold.co/400x300?text=Graduation+Day" alt="Graduation Day"
-                        class="gallery-img">
+                    <img src="img/set04.jpeg" alt="Class of '04" class="gallery-img">
                 </div>
                 <div class="gallery-item fade-in delay-100">
                     <img src="img/flyer.jpg" alt="Reunion '16" class="gallery-img">
                 </div>
                 <div class="gallery-item fade-in delay-200">
-                    <img src="img/download.jpg" alt="Campus Life" class="gallery-img">
+                    <img src="img/our school.jpeg" alt="Campus Life" class="gallery-img">
                 </div>
             </div>
         </div>
@@ -148,14 +146,10 @@
             <div class="rsvp-box fade-in">
                 <h2 class="section-title">RSVP</h2>
                 <p>Please confirm your attendance by filling out our google form.</p>
-
-
                 <!-- <a href="https://docs.google.com/forms/d/e/1FAIpQLScACeMraplkI5d6QNqZCzlWobP-jbpSIdb0pDkYG6VfKQ4pog/viewform?usp=header"
                     target="_blank" class="cta-button">RSVP</a> -->
 
                 <a href="#" target="_blank" class="cta-button">RSVP</a>
-
-
                 <iframe
                     src="https://docs.google.com/forms/d/e/1FAIpQLScACeMraplkI5d6QNqZCzlWobP-jbpSIdb0pDkYG6VfKQ4pog/viewform?embedded=true"
                     width="100%" height="600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
@@ -166,7 +160,7 @@
     <footer class="footer">
         <div class="container">
             <p class="contact-info">Contact: Kate Nakozi – 0813 722 4466</p>
-            <p>&copy; 2026 Itolo Girls Reunion - Class of 1986. All Rights Reserved.</p>
+            <p>&copy; 2026 Itolo Girls Reunion. All Rights Reserved.</p>
             <p class="footer-motto">"TRUE SERVICE TO GOD AND MANKIND"</p>
         </div>
     </footer>
